Pista dança anos 90

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
 	<title>Pista de dança | Caio Henrique</title>
+
+
+    <embed autostart='true' loop='true' src='musica90.mp3' width="0" height="0"></embed>
+
+</audio>
 </head>
 <body>
 	<div id="principal"></div>
